Stop sounds when loading new scene group

--- a/KrasCore.Essentials.asmdef
+++ b/KrasCore.Essentials.asmdef
@@ -14,7 +14,9 @@
         "GUID:69448af7b92c7f342b298e06a37122aa",
         "GUID:61431be5104c24137b41fcf2264ef434",
         "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:8541b15ee960bd54a84c1e17936e2da9"
+        "GUID:8541b15ee960bd54a84c1e17936e2da9",
+        "GUID:2716a46b05ca4b54e957f3d0a2f97b47",
+        "GUID:0c752da273b17c547ae705acf0f2adf2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
