--- a/Editor/KrasCore.Essentials.Editor.asmdef
+++ b/Editor/KrasCore.Essentials.Editor.asmdef
@@ -23,7 +23,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_EDITOR"
+    ],
     "versionDefines": [
         {
             "name": "com.unity.entities",
