--- a/Runtime/KrasCore.Essentials.asmdef
+++ b/Runtime/KrasCore.Essentials.asmdef
@@ -5,10 +5,11 @@
         "Unity.Addressables",
         "Unity.ResourceManager",
         "Unity.Addressables.Editor",
+        "abzorba.artificetoolkit.runtime",
+        "abzorba.artificetoolkit.editor",
         "Eflatun.SceneReference",
         "UniTask",
         "UniTask.Addressables",
-        "MoreMountains.Tools",
         "Unity.Entities",
         "Unity.Scenes",
         "Unity.Collections",
